--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: countdown_progress_indicator
 description: Customizable countdown timer for Flutter.
 version: 0.0.1
 author: Andres Felipe Rojas
-homepage:
+homepage: https://github.com/AndresR173/countdown_progress_indicator
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
