--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,10 +1,11 @@
 name: countdown_progress_indicator
-description: Customizable countdown timer for Flutter.
-version: 0.0.1
+description: Customizable countdown timer for Flutter with pause/resume controls.
+version: 0.1.0
+author: Andres Rojas
 homepage: https://github.com/AndresR173/countdown_progress_indicator
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: ">=2.12.0 <3.0.0"
   flutter: ">=1.17.0"
 
 dependencies:
@@ -14,7 +15,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  effective_dart: ^1.0.0
+  pedantic: ^1.0.0
 
 # The following section is specific to Flutter.
 flutter:
