--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,11 +1,11 @@
 name: countdown_progress_indicator
 description: Customizable countdown timer for Flutter with pause/resume controls.
-version: 0.1.2
+version: 0.1.3
 homepage: https://github.com/AndresR173/countdown_progress_indicator
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
-  flutter: ">=1.17.0"
+  sdk: '>=3.2.3 <4.0.0'
+  flutter: '>=3.19.0'
 
 dependencies:
   flutter:
@@ -14,7 +14,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^1.0.4
+  flutter_lints: ^4.0.0
 
 # The following section is specific to Flutter.
 flutter:
